--- a/scss/params.scss
+++ b/scss/params.scss
@@ -3,5 +3,12 @@ $colors:(
     work:#1cad89
 );
 
+$desktop: 840px;
+
+@mixin desktop {
+    @media (min-width: #{$desktop}) {
+        @content;
+    }
+}
 
 
