--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,12 @@ body {
 
 #main {
   width: 100%;
-  height: 40vh;
+}
+
+@media (min-width: 840px) {
+  #main {
+    height: 40vh;
+  }
 }
 
 #main .title {
@@ -112,19 +117,35 @@ body {
 #main .work-in-icons {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (auto)[5];
-      grid-template-columns: repeat(5, auto);
+  -ms-grid-columns: (auto)[2];
+      grid-template-columns: repeat(2, auto);
   justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  grid-gap: 50px;
+  grid-gap: 20px;
+  margin-bottom: 10px;
 }
 
 #main .work-in-icons .fab,
 #main .work-in-icons .fas {
-  font-size: 5em;
+  font-size: 2em;
   color: #1cad89;
+}
+
+@media (min-width: 840px) {
+  #main .work-in-icons .fab,
+  #main .work-in-icons .fas {
+    font-size: 5em;
+  }
+}
+
+@media (min-width: 840px) {
+  #main .work-in-icons {
+    grid-gap: 50px;
+    -ms-grid-columns: (auto)[5];
+        grid-template-columns: repeat(5, auto);
+  }
 }
 
 #main .card {
@@ -139,17 +160,31 @@ body {
   padding: 100px 0;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
   justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  grid-gap: 20px;
+}
+
+@media (min-width: 840px) {
+  #work {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+  }
 }
 
 #work .content {
   color: white;
-  font-size: 3em;
+  font-size: 1.5em;
+}
+
+@media (min-width: 840px) {
+  #work .content {
+    font-size: 3em;
+  }
 }
 
 #work .show-work img {
@@ -161,26 +196,42 @@ body {
 
 #cover {
   width: 100%;
-  background: linear-gradient(-45deg, #fbd863 -45%, #ff5acd 100%);
+  background: linear-gradient(-45deg, #fbd863 -45%, #3498db 100%);
   height: 90%;
   position: relative;
+  padding: 100px 0;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 50% 50%;
-      grid-template-columns: 50% 50%;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
   justify-items: center;
+  grid-gap: 20px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
+@media (min-width: 840px) {
+  #cover {
+    -ms-grid-columns: 50% 50%;
+        grid-template-columns: 50% 50%;
+  }
+}
+
 #cover .content {
   color: white;
-  font-size: 3em;
+  font-size: 1.5em;
+}
+
+@media (min-width: 840px) {
+  #cover .content {
+    font-size: 3em;
+  }
 }
 
 #cover img {
   width: 100%;
+  margin-left: 20px;
   height: 200%;
   -webkit-box-shadow: 2px 2px 2px 2px;
           box-shadow: 2px 2px 2px 2px;
@@ -191,7 +242,10 @@ body {
   color: white;
   padding: 4px;
   margin: 2px auto;
+  display: block;
+  text-align: center;
   border: 3px solid white;
+  text-transform: uppercase;
 }
 
 .btn-small {
