--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 @import "params.scss";
 @import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond|Indie+Flower|Montserrat");
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,700');
-@import url('https://fonts.googleapis.com/css?family=Dosis:300, 400, 700');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,700");
+@import url("https://fonts.googleapis.com/css?family=Dosis:300, 400, 700");
 * {
   margin: 0;
   padding: 0;
@@ -90,11 +90,12 @@ body {
 
 // }
 
-
 #main {
   width: 100%;
-  height: 40vh;
 
+  @include desktop {
+    height: 40vh;
+  }
   .title {
     text-align: center;
     margin: 2em auto;
@@ -102,14 +103,22 @@ body {
 
   .work-in-icons {
     display: grid;
-    grid-template-columns: repeat(5, auto);
+    grid-template-columns: repeat(2, auto);
     justify-items: center;
     align-items: center;
-    grid-gap: 50px;
+    grid-gap: 20px;
+    margin-bottom: 10px;
     .fab,
     .fas {
-      font-size: 5em;
+      font-size: 2em;
       color: map-get($colors, work);
+      @include desktop {
+        font-size: 5em;
+      }
+    }
+    @include desktop {
+      grid-gap: 50px;
+      grid-template-columns: repeat(5, auto);
     }
   }
 
@@ -118,7 +127,8 @@ body {
   }
 }
 #work {
-  background-color: map-get($colors, work);
+  // background-color: map-get($colors, work);
+  background: linear-gradient(45deg, darkenmap-get($colors, work)) 45%, map-get($colors, work) 100%);
   // border-top-left-radius: 50% 60px;
   // border-top-right-radius: 50% 60px;
   // border-bottom-left-radius: 50% 60px;
@@ -126,20 +136,26 @@ body {
   width: 100%;
   height: 60%;
   position: relative;
-  padding:100px 0;
+  padding: 100px 0;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: auto;
   justify-items: center;
   align-items: center;
-
-  .content{
-    color:white;
-    font-size: 3em;
+  grid-gap: 20px;
+  @include desktop {
+    grid-template-columns: 1fr 1fr;
+   
   }
-  .show-work{
-    
-    img{
-      width:200px;
+  .content {
+    color: white;
+    font-size: 1.5em;
+    @include desktop {
+      font-size: 3em;
+    }
+  }
+  .show-work {
+    img {
+      width: 200px;
       height: 30%;
       // transform: skewY(-15deg);
       box-shadow: 2px 2px 2px 2px;
@@ -147,39 +163,50 @@ body {
   }
 }
 
-#cover{
+#cover {
   width: 100%;
-  background: linear-gradient(-45deg,#fbd863 -45%,#ff5acd 100%);
+  background: linear-gradient(-45deg, darken(#3498db) -45%, #3498db 100%);
   height: 90%;
-  
+
   position: relative;
-  // padding:100px 0;
+  padding:100px 0;
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: auto;
   justify-items: center;
+  grid-gap: 20px;
   align-items: center;
-  .content{
-    color:white;
-    font-size: 3em;
+  @include desktop {
+    grid-template-columns: 50% 50%;
+    
   }
-  img{
-    width:100%;
+  .content {
+    color: white;
+    font-size: 1.5em;
+    @include desktop {
+      font-size: 3em;
+    }
+  }
+  img {
+    width: 100%;
+    margin-left: 20px;
     height: 200%;
     // transform: skewY(-15deg);
     box-shadow: 2px 2px 2px 2px;
   }
 }
 
-.btn{
+.btn {
   text-decoration: none;
-  color:white;
-  padding:4px;
+  color: white;
+  padding: 4px;
   margin: 2px auto;
+  display: block;
+  text-align: center;
   border: 3px solid white;
-
+  text-transform: uppercase;
 }
 
-.btn-small{
+.btn-small {
   font-size: 1.5rem;
 }
 .container {
@@ -195,8 +222,8 @@ body {
   height: 0;
 }
 
-footer{
-  padding:100px;
+footer {
+  padding: 100px;
   text-align: center;
   position: relative;
   bottom: 0%;
