--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ body {
   background-image: url("../images/showcase.jpeg");
   height: 100vh;
   background-size: cover;
+  background-attachment: fixed;
   background-position: center;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -153,7 +154,7 @@ body {
 }
 
 #work {
-  background-color: #1cad89;
+  background: linear-gradient(-45deg, #158166 -45%, #1cad89 100%);
   width: 100%;
   height: 60%;
   position: relative;
@@ -183,7 +184,8 @@ body {
 
 @media (min-width: 840px) {
   #work .content {
-    font-size: 3em;
+    font-size: 2em;
+    width: 80%;
   }
 }
 
@@ -196,10 +198,9 @@ body {
 
 #cover {
   width: 100%;
-  background: linear-gradient(-45deg, #fbd863 -45%, #3498db 100%);
   height: 90%;
   position: relative;
-  padding: 100px 0;
+  padding-top: 100px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: auto;
@@ -218,20 +219,32 @@ body {
   }
 }
 
+@media (min-width: 840px) {
+  #cover .cover-work {
+    padding-left: 30px;
+  }
+}
+
 #cover .content {
-  color: white;
+  color: black;
+  display: block;
   font-size: 1.5em;
+  width: 80%;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -webkit-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto;
 }
 
 @media (min-width: 840px) {
   #cover .content {
-    font-size: 3em;
+    font-size: 2em;
   }
 }
 
 #cover img {
   width: 100%;
-  margin-left: 20px;
   height: 200%;
   -webkit-box-shadow: 2px 2px 2px 2px;
           box-shadow: 2px 2px 2px 2px;
@@ -239,13 +252,96 @@ body {
 
 .btn {
   text-decoration: none;
-  color: white;
+  color: inherit;
   padding: 4px;
   margin: 2px auto;
   display: block;
   text-align: center;
-  border: 3px solid white;
+  border: 3px solid;
   text-transform: uppercase;
+}
+
+.latest {
+  width: 100%;
+  height: 80%;
+  position: relative;
+  padding: 50px 0;
+}
+
+.latest .content {
+  text-align: center;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
+}
+
+.latest #other {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (auto)[2];
+      grid-template-columns: repeat(2, auto);
+  -ms-grid-rows: (auto)[3];
+      grid-template-rows: repeat(3, auto);
+}
+
+@media (min-width: 840px) {
+  .latest #other {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+.latest #other .card {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  position: relative;
+}
+
+.latest #other .card img {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: 10%;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.latest #other .card img:hover {
+  opacity: 0.3;
+}
+
+.latest #other .card .middle {
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.latest #other .card .middle .text {
+  background-color: #1cad89;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
+
+.latest #other .card:hover .middle {
+  opacity: 1;
 }
 
 .btn-small {
