--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,6 +23,7 @@ body {
   background-image: url("../images/showcase.jpeg");
   height: 100vh;
   background-size: cover;
+  background-attachment: fixed;
   background-position: center;
   display: flex;
   justify-content: center;
@@ -74,22 +75,6 @@ body {
     }
   }
 }
-// .mainbg{
-//   // display: grid;
-//   // grid-template-columns: auto;
-
-//     // clip-path: polygon(77% 76%, 100% 38%, 100% 100%, 0% 100%);
-//     z-index: -1;
-
-//     position: absolute;
-//     width: 100%;
-//     height: 40vh;
-//     // background-color: #226dbc;
-//     // border-bottom-left-radius: 50px;
-//     // border-bottom-right-radius: 50px;
-
-// }
-
 #main {
   width: 100%;
 
@@ -128,7 +113,11 @@ body {
 }
 #work {
   // background-color: map-get($colors, work);
-  background: linear-gradient(45deg, darkenmap-get($colors, work)) 45%, map-get($colors, work) 100%);
+  background: linear-gradient(
+    -45deg,
+    darken(map-get($colors, work), 10%) -45%,
+    map-get($colors, work) 100%
+  );
   // border-top-left-radius: 50% 60px;
   // border-top-right-radius: 50% 60px;
   // border-bottom-left-radius: 50% 60px;
@@ -144,13 +133,13 @@ body {
   grid-gap: 20px;
   @include desktop {
     grid-template-columns: 1fr 1fr;
-   
   }
   .content {
     color: white;
     font-size: 1.5em;
     @include desktop {
-      font-size: 3em;
+      font-size: 2em;
+      width: 80%;
     }
   }
   .show-work {
@@ -165,11 +154,11 @@ body {
 
 #cover {
   width: 100%;
-  background: linear-gradient(-45deg, darken(#3498db) -45%, #3498db 100%);
+  // background: linear-gradient(-45deg, lighten(#3498db, 10%) -45%, #3498db 100%);
   height: 90%;
 
   position: relative;
-  padding:100px 0;
+  padding-top: 100px;
   display: grid;
   grid-template-columns: auto;
   justify-items: center;
@@ -177,18 +166,32 @@ body {
   align-items: center;
   @include desktop {
     grid-template-columns: 50% 50%;
-    
+  }
+
+  .cover-work {
+    @include desktop {
+      padding-left: 30px;
+    }
   }
   .content {
-    color: white;
+    color: black;
+    display: block;
     font-size: 1.5em;
+    width: 80%;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
     @include desktop {
-      font-size: 3em;
+      font-size: 2em;
+      // padding:20px;
     }
   }
   img {
     width: 100%;
-    margin-left: 20px;
+
+    @include desktop {
+      // margin-left: 20px;
+    }
     height: 200%;
     // transform: skewY(-15deg);
     box-shadow: 2px 2px 2px 2px;
@@ -197,13 +200,74 @@ body {
 
 .btn {
   text-decoration: none;
-  color: white;
+  color: inherit;
   padding: 4px;
   margin: 2px auto;
   display: block;
   text-align: center;
-  border: 3px solid white;
+  border: 3px solid;
   text-transform: uppercase;
+}
+
+.latest {
+  width: 100%;
+  height: 80%;
+  position: relative;
+  padding: 50px 0;
+  .content {
+    text-align: center;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    letter-spacing: 0.5em;
+  }
+
+  #other {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(3, auto);
+
+    @include desktop {
+      display: flex;
+      flex-direction: row;
+    }
+    .card {
+      box-sizing: border-box;
+      align-self: center;
+      position: relative;
+      img {
+        opacity: 1;
+        display: block;
+        width: 100%;
+        height: 10%;
+        transition: 0.5s ease;
+        backface-visibility: hidden;
+        &:hover {
+          opacity: 0.3;
+        }
+      }
+      .middle {
+        transition: 0.5s ease;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        text-align: center;
+
+        .text {
+          background-color: color(primary);
+          color: white;
+          font-size: 16px;
+          padding: 16px 32px;
+        }
+      }
+
+      &:hover .middle {
+        opacity: 1;
+      }
+    }
+  }
 }
 
 .btn-small {
