--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  background: #fafbfb;
+  background: #f4f7f8;
   font-family: "Montserrat", sans-serif;
   margin: 0;
 }
@@ -200,7 +200,7 @@ body {
   width: 100%;
   height: 90%;
   position: relative;
-  padding-top: 100px;
+  padding: 50px 0;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: auto;
@@ -268,9 +268,10 @@ body {
   padding: 50px 0;
 }
 
-.latest .content {
+.latest .title {
   text-align: center;
   margin-bottom: 20px;
+  font-size: 1em;
   text-transform: uppercase;
   letter-spacing: 0.5em;
 }
@@ -344,6 +345,24 @@ body {
   opacity: 1;
 }
 
+#about {
+  background: #1cad89;
+  height: 80%;
+  width: 100%;
+  padding: 50px 0;
+  position: relative;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+}
+
+#about .content {
+  text-align: center;
+  color: white;
+  font-size: 1.5em;
+}
+
 .btn-small {
   font-size: 1.5rem;
 }
@@ -362,10 +381,23 @@ body {
 }
 
 footer {
-  padding: 100px;
+  padding: 50px;
   text-align: center;
   position: relative;
   bottom: 0%;
+  color: #717e83;
+  background-color: #0e1e25;
+}
+
+footer .fab {
+  font-size: 2em;
+  padding: 10px;
+}
+
+@media (min-width: 840px) {
+  footer .fab {
+    font-size: 2em;
+  }
 }
 
 .clearfix {
