--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-  background: map-get($colors, bg);
+  background:color(bg);
   font-family: "Montserrat", sans-serif;
   margin: 0;
 }
@@ -96,7 +96,7 @@ body {
     .fab,
     .fas {
       font-size: 2em;
-      color: map-get($colors, work);
+      color: color(primary);
       @include desktop {
         font-size: 5em;
       }
@@ -112,16 +112,11 @@ body {
   }
 }
 #work {
-  // background-color: map-get($colors, work);
   background: linear-gradient(
     -45deg,
-    darken(map-get($colors, work), 10%) -45%,
-    map-get($colors, work) 100%
+    darken(color(primary), 10%) -45%,
+    color(primary) 100%
   );
-  // border-top-left-radius: 50% 60px;
-  // border-top-right-radius: 50% 60px;
-  // border-bottom-left-radius: 50% 60px;
-  // border-bottom-right-radius: 50% 60px;
   width: 100%;
   height: 60%;
   position: relative;
@@ -154,11 +149,9 @@ body {
 
 #cover {
   width: 100%;
-  // background: linear-gradient(-45deg, lighten(#3498db, 10%) -45%, #3498db 100%);
   height: 90%;
-
   position: relative;
-  padding-top: 100px;
+  padding: 50px 0;
   display: grid;
   grid-template-columns: auto;
   justify-items: center;
@@ -214,9 +207,11 @@ body {
   height: 80%;
   position: relative;
   padding: 50px 0;
-  .content {
+  .title {
     text-align: center;
     margin-bottom: 20px;
+    font-size: 1em;
+    // font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 0.5em;
   }
@@ -270,6 +265,24 @@ body {
   }
 }
 
+
+#about{
+  background: color(primary);
+  height: 80%;
+  width:100%;
+  padding: 50px 0;
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
+
+  .content{
+    text-align: center;
+    color:white;
+    font-size: 1.5em;
+  }
+}
+
+
 .btn-small {
   font-size: 1.5rem;
 }
@@ -287,10 +300,19 @@ body {
 }
 
 footer {
-  padding: 100px;
+  padding: 50px;
   text-align: center;
   position: relative;
   bottom: 0%;
+  color:color(footer-text);
+  background-color: color(footer);
+  .fab {
+      font-size: 2em;
+      padding: 10px;
+      @include desktop {
+        font-size: 2em;
+      }
+    }
 }
 .clearfix {
   display: table;
