--- a/scss/params.scss
+++ b/scss/params.scss
@@ -1,7 +1,10 @@
 $colors:(
-    bg:#fafbfb,
-    work:#1cad89,
-    primary:#1cad89
+    bg:#f4f7f8,
+    primary:#1cad89,
+    footer: #0e1e25,
+    footer-text: #717e83,
+    color: rgba(14,30,37,.54)
+
 );
 
 $desktop: 840px;
