--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond|Indie+Flower|Montserrat");
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,700");
-@import url("https://fonts.googleapis.com/css?family=Dosis:300, 400, 700");
 * {
   margin: 0;
   padding: 0;
@@ -13,17 +10,162 @@ html {
 }
 
 body {
-  background: #f4f7f8;
+  background: #202124;
   font-family: "Montserrat", sans-serif;
   margin: 0;
 }
 
 #showcase {
-  background-image: url("../images/showcase.jpeg");
+  background: -webkit-gradient(linear, left bottom, right top, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.8))), url("../images/showcase.jpeg");
+  background: linear-gradient(to top right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url("../images/showcase.jpeg");
   height: 100vh;
+  position: relative;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
+}
+
+#showcase nav {
+  position: fixed;
+  width: 100%;
+  background-color: rgba(32, 33, 36, 0.8);
+  color: #fff;
+  z-index: 999;
+}
+
+@media (min-width: 840px) {
+  #showcase nav {
+    background-color: transparent;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  }
+}
+
+#showcase nav .menu_icon {
+  float: right;
+  cursor: pointer;
+}
+
+#showcase nav .menu_icon .bar1,
+#showcase nav .menu_icon .bar2,
+#showcase nav .menu_icon .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 8px 0;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+@media (min-width: 840px) {
+  #showcase nav .menu_icon {
+    display: none;
+  }
+}
+
+#showcase nav .change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+#showcase nav .change .bar2 {
+  opacity: 0;
+}
+
+#showcase nav .change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
+}
+
+#showcase nav .logo {
+  font-size: 1.5em;
+  text-align: left;
+  padding: 10px;
+  float: left;
+}
+
+#showcase nav .menu {
+  display: none;
+}
+
+@media (min-width: 840px) {
+  #showcase nav .menu {
+    display: block;
+    padding-right: 4em;
+  }
+}
+
+#showcase nav .menu_visible {
+  display: block;
+  margin-top: 40px;
+  -webkit-animation: menu_show 1s forwards 0s ease;
+          animation: menu_show 1s forwards 0s ease;
+}
+
+@-webkit-keyframes menu_show {
+  0% {
+    -webkit-transform: rotate(0) translateY(-15%);
+            transform: rotate(0) translateY(-15%);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotate(0) translateY(0);
+            transform: rotate(0) translateY(0);
+    opacity: 1;
+    height: auto;
+  }
+}
+
+@keyframes menu_show {
+  0% {
+    -webkit-transform: rotate(0) translateY(-15%);
+            transform: rotate(0) translateY(-15%);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotate(0) translateY(0);
+            transform: rotate(0) translateY(0);
+    opacity: 1;
+    height: auto;
+  }
+}
+
+@media (min-width: 840px) {
+  #showcase nav ul {
+    float: right;
+  }
+}
+
+#showcase nav ul li {
+  padding: 1em;
+  text-transform: uppercase;
+  list-style-type: none;
+  text-align: center;
+}
+
+@media (min-width: 840px) {
+  #showcase nav ul li {
+    float: left;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  #showcase nav ul li .active {
+    border-bottom: 2px solid white;
+  }
+}
+
+#showcase nav ul li a {
+  text-decoration: none;
+  color: inherit;
+}
+
+@media (min-width: 840px) {
+  #showcase nav ul li a {
+    display: block;
+    padding: 2px 20px;
+  }
+}
+
+#showcase .showdata {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -34,13 +176,14 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  height: 90%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   padding: 0 20px;
 }
 
-#showcase .content {
+#showcase .showdata .content {
   -webkit-animation: showcase 3s forwards 0s ease;
           animation: showcase 3s forwards 0s ease;
   background: rgba(0, 0, 0, 0.2);
@@ -48,7 +191,7 @@ body {
   border-radius: 1em;
 }
 
-#showcase h1 {
+#showcase .showdata h1 {
   color: white;
   font-family: "Cormorant Garamond", serif;
   font-size: 3rem;
@@ -82,7 +225,7 @@ body {
   }
 }
 
-#showcase blockquote {
+#showcase .showdata blockquote {
   color: white;
   font-size: 1em;
   text-align: center;
@@ -91,12 +234,12 @@ body {
   letter-spacing: 0.5em;
 }
 
-#showcase blockquote .author {
+#showcase .showdata blockquote .author {
   text-align: right;
   color: white;
 }
 
-#showcase blockquote .author:before {
+#showcase .showdata blockquote .author:before {
   content: "-- ";
 }
 
@@ -401,6 +544,6 @@ footer .fab {
 }
 
 .clearfix {
-  display: table;
+  clear: both;
 }
 /*# sourceMappingURL=main.css.map */
