--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 @import "params.scss";
-@import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond|Indie+Flower|Montserrat");
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,700");
-@import url("https://fonts.googleapis.com/css?family=Dosis:300, 400, 700");
+// @import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond|Indie+Flower|Montserrat");
+// @import url("https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,700");
+// @import url("https://fonts.googleapis.com/css?family=Dosis:300, 400, 700");
 * {
   margin: 0;
   padding: 0;
@@ -14,67 +14,190 @@ html {
 }
 
 body {
-  background:color(bg);
+  background: color(bg);
   font-family: "Montserrat", sans-serif;
   margin: 0;
 }
 
 #showcase {
-  background-image: url("../images/showcase.jpeg");
+  background: linear-gradient(
+    to top right,
+    rgba(0,0,0, 0.5),
+    rgba(0,0,0, 0.8)
+  ), url("../images/showcase.jpeg");
   height: 100vh;
+  position: relative;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  padding: 0 20px;
+ 
+  nav {
+    position: fixed;
+    width: 100%;
+    background-color: rgba(32,33,36,0.8);
+    color: #fff;
+    z-index: 999;
 
-  // filter: blur(2px);
+    @include desktop {
+      background-color: transparent;
+      border-bottom: 1px solid rgba(255,255,255,0.3);
 
-  .content {
-    animation: showcase 3s forwards 0s ease;
-    background: rgba(0, 0, 0, 0.2);
-    padding: 1em 1em;
-    border-radius: 1em;
-  }
-  h1 {
-    color: white;
-    font-family: "Cormorant Garamond", serif;
-    // font-family: Dosis, arial, sans-serif;
-    font-size: 3rem;
-    text-transform: uppercase;
-    letter-spacing: 0.3em;
-  }
-
-  @keyframes showcase {
-    0% {
-      transform: rotate(0) translateY(-15%);
-      opacity: 0;
     }
-    100% {
-      transform: rotate(0) translateY(0);
-      opacity: 1;
+    .menu_icon {
+      float: right;
+      cursor: pointer;
+      .bar1,
+      .bar2,
+      .bar3 {
+        width: 35px;
+        height: 5px;
+        background-color: white;
+        margin: 8px 0;
+        transition: 0.4s;
+      }
+      @include desktop {
+        display: none;
+      }
+    }
+    .change {
+      .bar1 {
+        -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+        transform: rotate(-45deg) translate(-9px, 6px);
+      }
+      .bar2 {
+        opacity: 0;
+      }
+      .bar3 {
+        -webkit-transform: rotate(45deg) translate(-8px, -8px);
+        transform: rotate(45deg) translate(-8px, -8px);
+      }
+    }
+    .logo {
+      font-size: 1.5em;
+      text-align: left;
+      padding:10px;
+      float: left;
+    }
+    .menu{
+      display: none;
+      @include desktop {
+        display: block;
+        padding-right: 4em;
+      }
+      
+    }
+    .menu_visible{
+      display: block;
+      margin-top: 40px;
+      animation: menu_show 1s forwards 0s ease;
+    }
+
+    @keyframes menu_show {
+      0% {
+        transform: rotate(0) translateY(-15%);
+        opacity: 0;
+     
+      }
+      // 25%{
+      //   height: 50px;
+      // }
+      // 50%{
+      //   height: 100px;
+      // }
+      // 75%{
+      //   height: 150px;
+      // }
+      100% {
+        transform: rotate(0) translateY(0);
+        opacity: 1;
+        height: auto;
+      }
+    }
+    ul {
+      @include desktop {
+        float: right;
+
+        
+      }
+      li {
+        @include desktop {
+          float: left;
+          box-sizing: border-box;
+          .active{
+            border-bottom: 2px solid white;
+          }
+        }
+        padding: 1em;
+        text-transform: uppercase;
+        list-style-type: none;
+        text-align: center;
+        a {
+          text-decoration: none;
+          color: inherit;
+          @include desktop {
+            display: block;
+            padding: 2px 20px;
+          }
+        }
+      }
     }
   }
 
-  blockquote {
-    color: white;
-    font-size: 1em;
-    text-align: center;
-    font-weight: 4em;
-    font-family: Dosis, arial, sans-serif;
-    letter-spacing: 0.5em;
-    .author {
-      text-align: right;
+  .showdata {
+   
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 90%;
+    align-items: center;
+    padding: 0 20px;
+
+    // filter: blur(2px);
+
+    .content {
+      animation: showcase 3s forwards 0s ease;
+      background: rgba(0, 0, 0, 0.2);
+      padding: 1em 1em;
+      border-radius: 1em;
+    }
+    h1 {
       color: white;
-      &:before {
-        content: "-- ";
+      font-family: "Cormorant Garamond", serif;
+      // font-family: Dosis, arial, sans-serif;
+      font-size: 3rem;
+      text-transform: uppercase;
+      letter-spacing: 0.3em;
+    }
+
+    @keyframes showcase {
+      0% {
+        transform: rotate(0) translateY(-15%);
+        opacity: 0;
+      }
+      100% {
+        transform: rotate(0) translateY(0);
+        opacity: 1;
+      }
+    }
+
+    blockquote {
+      color: white;
+      font-size: 1em;
+      text-align: center;
+      font-weight: 4em;
+      font-family: Dosis, arial, sans-serif;
+      letter-spacing: 0.5em;
+      .author {
+        text-align: right;
+        color: white;
+        &:before {
+          content: "-- ";
+        }
       }
     }
   }
 }
+
 #main {
   width: 100%;
 
@@ -265,23 +388,21 @@ body {
   }
 }
 
-
-#about{
+#about {
   background: color(primary);
   height: 80%;
-  width:100%;
+  width: 100%;
   padding: 50px 0;
   position: relative;
   display: grid;
   grid-template-columns: 1fr;
 
-  .content{
+  .content {
     text-align: center;
-    color:white;
+    color: white;
     font-size: 1.5em;
   }
 }
-
 
 .btn-small {
   font-size: 1.5rem;
@@ -304,16 +425,16 @@ footer {
   text-align: center;
   position: relative;
   bottom: 0%;
-  color:color(footer-text);
+  color: color(footer-text);
   background-color: color(footer);
   .fab {
+    font-size: 2em;
+    padding: 10px;
+    @include desktop {
       font-size: 2em;
-      padding: 10px;
-      @include desktop {
-        font-size: 2em;
-      }
     }
+  }
 }
 .clearfix {
-  display: table;
+  clear: both;
 }
