--- a/scss/params.scss
+++ b/scss/params.scss
@@ -1,5 +1,6 @@
 $colors:(
-    bg:#f4f7f8,
+    // bg:#f4f7f8,
+    bg:#202124,
     primary:#1cad89,
     footer: #0e1e25,
     footer-text: #717e83,
