--- a/scss/params.scss
+++ b/scss/params.scss
@@ -1,8 +1,9 @@
 $colors:(
     // bg:#f4f7f8,
     bg:#202124,
-    primary:#1cad89,
-    footer: #0e1e25,
+    primary:transparent,
+    // primary:#1cad89,
+    footer: #000,
     footer-text: #717e83,
     color: rgba(14,30,37,.54)
 
