--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@ body {
   background: color(bg);
   font-family: "Montserrat", sans-serif;
   margin: 0;
+  color: white;
 }
 
 #showcase {
@@ -219,7 +220,6 @@ body {
     .fab,
     .fas {
       font-size: 2em;
-      color: color(primary);
       @include desktop {
         font-size: 5em;
       }
@@ -243,7 +243,7 @@ body {
   width: 100%;
   height: 60%;
   position: relative;
-  padding: 100px 0;
+
   display: grid;
   grid-template-columns: auto;
   justify-items: center;
@@ -262,10 +262,15 @@ body {
   }
   .show-work {
     img {
-      width: 200px;
+      width: 50%;
       height: 30%;
+      margin-left:20%; 
+      @include desktop {
+       
+      }
+      align-self: center;
       // transform: skewY(-15deg);
-      box-shadow: 2px 2px 2px 2px;
+      box-shadow: 2px 2px 2px 2px black;
     }
   }
 }
@@ -290,7 +295,6 @@ body {
     }
   }
   .content {
-    color: black;
     display: block;
     font-size: 1.5em;
     width: 80%;
@@ -310,7 +314,7 @@ body {
     }
     height: 200%;
     // transform: skewY(-15deg);
-    box-shadow: 2px 2px 2px 2px;
+    box-shadow: 2px 2px 2px 2px black;
   }
 }
 
