--- a/scss/main.scss
+++ b/scss/main.scss
@@ -262,18 +262,17 @@ body {
   }
   .show-work {
     img {
-      width: 50%;
-      height: 30%;
-      margin-left:20%; 
+      width: 100%;
       @include desktop {
        
       }
       align-self: center;
       // transform: skewY(-15deg);
-      box-shadow: 2px 2px 2px 2px black;
+      // box-shadow: 2px 2px 2px 2px black;
     }
   }
 }
+
 
 #cover {
   width: 100%;
@@ -314,7 +313,6 @@ body {
     }
     height: 200%;
     // transform: skewY(-15deg);
-    box-shadow: 2px 2px 2px 2px black;
   }
 }
 
