--- a/scss/params.scss
+++ b/scss/params.scss
@@ -1,7 +1,9 @@
 $colors:(
     // bg:#f4f7f8,
-    bg:#202124,
+    // bg:#202124,
+    bg:#f1f1fa,
     primary:transparent,
+    text-color:#444,
     // primary:#1cad89,
     footer: #000,
     footer-text: #717e83,
