--- a/scss/params.scss
+++ b/scss/params.scss
@@ -4,6 +4,7 @@ $colors:(
     bg:#f1f1fa,
     primary:transparent,
     text-color:#444,
+    contact:#1f8078,
     // primary:#1cad89,
     footer: #000,
     footer-text: #717e83,
