--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 @import "params.scss";
-// @import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond|Indie+Flower|Montserrat");
-// @import url("https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,700");
-// @import url("https://fonts.googleapis.com/css?family=Dosis:300, 400, 700");
+@import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond|Indie+Flower|Montserrat");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,700");
+@import url("https://fonts.googleapis.com/css?family=Dosis:300, 400, 700");
 * {
   margin: 0;
   padding: 0;
@@ -160,7 +160,7 @@ body {
 
     // filter: blur(2px);
 
-    .content {
+    .tagline {
       animation: showcase 3s forwards 0s ease;
       background: rgba(0, 0, 0, 0.2);
       padding: 1em 1em;
@@ -257,14 +257,7 @@ body {
   @include desktop {
     grid-template-columns: 1fr 1fr;
   }
-  .content {
-    color: color(text-color);
-    font-size: 1.5em;
-    @include desktop {
-      font-size: 2em;
-      width: 80%;
-    }
-  }
+  
   .show-work {
     img {
       width: 100%;
@@ -277,7 +270,22 @@ body {
     }
   }
 }
-
+.content {
+  display: block;
+  font-size: 1.5em;
+  width: 80%;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  text-align: center;
+  hyphens: auto;
+  span{
+    font-size: 1.2rem;
+  }
+  @include desktop {
+    font-size: 2em;
+    // padding:20px;
+  }
+}
 
 #cover {
   width: 100%;
@@ -298,18 +306,7 @@ body {
       padding-left: 30px;
     }
   }
-  .content {
-    display: block;
-    font-size: 1.5em;
-    width: 80%;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    hyphens: auto;
-    @include desktop {
-      font-size: 2em;
-      // padding:20px;
-    }
-  }
+ 
   img {
     width: 100%;
 
@@ -321,16 +318,7 @@ body {
   }
 }
 
-.btn {
-  text-decoration: none;
-  color: inherit;
-  padding: 4px;
-  margin: 2px auto;
-  display: block;
-  text-align: center;
-  border: 3px solid;
-  text-transform: uppercase;
-}
+
 
 .latest {
   width: 100%;
@@ -408,12 +396,40 @@ body {
     text-align: center;
     color: color(text-color);;
     font-size: 1.5em;
+    width: 100%;
   }
 }
 
-.btn-small {
-  font-size: 1.5rem;
+#contact{
+  height: 60vh;
+  text-align: center;
+  background: linear-gradient(
+    to top,
+    rgba(0,0,0, 0.5),
+    rgba(0,0,0, 0.8)
+  ), url("../images/svg/contact.svg");
+  background-size: cover;
+  background-attachment: fixed;
+  padding: 20px;
+  background-position: center;
+  color: white;
+  h1{
+    font-size: 3em;
+  }
+  span{
+    font-size: 2em;
+  }
+
+  a{
+    margin-top:4em;
+
+    @include desktop {
+      margin-top:6em;
+    }
+  }
+  
 }
+
 .container {
   text-align: center;
 }
@@ -444,4 +460,40 @@ footer {
 }
 .clearfix {
   clear: both;
+}
+
+.btn {
+  text-decoration: none;
+  color: inherit;
+  padding: 4px;
+  margin: 2px auto;
+  display: block;
+  text-align: center;
+  border: 3px solid;
+  text-transform: uppercase;
+  transition: all 1000ms;
+
+  &:hover{
+    background-color: #000;
+    color:#fff;
+    transition: all 1000ms;
+  }
+}
+
+a{
+  text-decoration: none;
+}
+
+.btn-green{
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+.btn-small {
+  font-size: 1.5rem;
 }
