--- a/css/main.css
+++ b/css/main.css
@@ -506,6 +506,7 @@ body {
 
 #contact h1 {
   font-size: 3em;
+  margin-bottom: 1em;
 }
 
 #contact span {
@@ -518,7 +519,7 @@ body {
 
 @media (min-width: 840px) {
   #contact a {
-    margin-top: 6em;
+    margin-top: 4em;
   }
 }
 
