Work start for Work page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,156 +1,50 @@
 @import "params.scss";
-@import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond|Indie+Flower|Montserrat");
+@import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond|Indie+Flower|Montserrat|Pacifico");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,700");
 @import url("https://fonts.googleapis.com/css?family=Dosis:300, 400, 700");
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body,
-html {
-  height: 100%;
-  width: 100%;
-}
-
-body {
-  background: color(bg);
-  font-family: "Montserrat", sans-serif;
-  margin: 0;
-  color: color(text-color);
-}
 
 #showcase {
   background: linear-gradient(
-    to top right,
-    rgba(0,0,0, 0.5),
-    rgba(0,0,0, 0.8)
-  ), url("../images/showcase.jpeg");
+      to top right,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.8)
+    ),
+    url("../images/showcase.jpeg");
   height: 100vh;
   position: relative;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
- 
-  .navBlack{
-    background-color: rgba(32,33,36,0.8);
-
+  .navBlack {
+    background-color: rgba(32, 33, 36, 0.8);
   }
-
   nav {
-    position: fixed;
-    width: 100%;
-    background-color: rgba(32,33,36,0.8);
+    background-color: rgba(32, 33, 36, 0.8);
     color: #fff;
-    z-index: 999;
 
     @include desktop {
       background-color: transparent;
-      border-bottom: 1px solid rgba(255,255,255,0.3);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    }
 
+    li {
+      @include desktop {
+        .active {
+          border-bottom: 2px solid white;
+        }
+      }
     }
     .menu_icon {
-      float: right;
       cursor: pointer;
       .bar1,
       .bar2,
       .bar3 {
-        width: 35px;
-        height: 5px;
-        background-color: white;
-        margin: 8px 0;
-        transition: 0.4s;
-      }
-      @include desktop {
-        display: none;
-      }
-    }
-    .change {
-      .bar1 {
-        -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-        transform: rotate(-45deg) translate(-9px, 6px);
-      }
-      .bar2 {
-        opacity: 0;
-      }
-      .bar3 {
-        -webkit-transform: rotate(45deg) translate(-8px, -8px);
-        transform: rotate(45deg) translate(-8px, -8px);
-      }
-    }
-    .logo {
-      font-size: 1.5em;
-      text-align: left;
-      padding:10px;
-      float: left;
-    }
-    .menu{
-      display: none;
-      @include desktop {
-        display: block;
-        padding-right: 4em;
-      }
-      
-    }
-    .menu_visible{
-      display: block;
-      margin-top: 40px;
-      animation: menu_show 1s forwards 0s ease;
-    }
-
-    @keyframes menu_show {
-      0% {
-        transform: rotate(0) translateY(-15%);
-        opacity: 0;
-     
-      }
-      // 25%{
-      //   height: 50px;
-      // }
-      // 50%{
-      //   height: 100px;
-      // }
-      // 75%{
-      //   height: 150px;
-      // }
-      100% {
-        transform: rotate(0) translateY(0);
-        opacity: 1;
-        height: auto;
-      }
-    }
-    ul {
-      @include desktop {
-        float: right;
-
-        
-      }
-      li {
-        @include desktop {
-          float: left;
-          box-sizing: border-box;
-          .active{
-            border-bottom: 2px solid white;
-          }
-        }
-        padding: 1em;
-        text-transform: uppercase;
-        list-style-type: none;
-        text-align: center;
-        a {
-          text-decoration: none;
-          color: inherit;
-          @include desktop {
-            display: block;
-            padding: 2px 20px;
-          }
-        }
+        background-color: #fff;
       }
     }
   }
 
   .showdata {
-   
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -168,7 +62,9 @@ body {
     }
     h1 {
       color: white;
-      font-family: "Cormorant Garamond", serif;
+      // font-family: 50 50px/1.5, 'Pacifico', Helvetica, sans-serif;
+      font-family: "Pacifico", cursive;
+      // font-family: "Cormorant Garamond", serif;
       // font-family: Dosis, arial, sans-serif;
       font-size: 3rem;
       text-transform: uppercase;
@@ -257,12 +153,11 @@ body {
   @include desktop {
     grid-template-columns: 1fr 1fr;
   }
-  
+
   .show-work {
     img {
       width: 100%;
       @include desktop {
-       
       }
       align-self: center;
       // transform: skewY(-15deg);
@@ -278,7 +173,7 @@ body {
   word-wrap: break-word;
   text-align: center;
   hyphens: auto;
-  span{
+  span {
     font-size: 1.2rem;
   }
   @include desktop {
@@ -306,7 +201,7 @@ body {
       padding-left: 30px;
     }
   }
- 
+
   img {
     width: 100%;
 
@@ -317,8 +212,6 @@ body {
     // transform: skewY(-15deg);
   }
 }
-
-
 
 .latest {
   width: 100%;
@@ -346,12 +239,19 @@ body {
     .card {
       box-sizing: border-box;
       align-self: center;
+      margin: 10px;
       position: relative;
+      box-shadow: 0 25px 30px -18px rgba(0, 0, 0, 0.28);
+
       img {
         opacity: 1;
         display: block;
         width: 100%;
         height: 10%;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
         transition: 0.5s ease;
         backface-visibility: hidden;
         &:hover {
@@ -369,7 +269,7 @@ body {
         text-align: center;
 
         .text {
-          background-color: color(primary);
+          background-color: green;
           color: white;
           font-size: 16px;
           padding: 16px 32px;
@@ -394,41 +294,40 @@ body {
 
   .content {
     text-align: center;
-    color: color(text-color);;
+    color: color(text-color);
     font-size: 1.5em;
     width: 100%;
   }
 }
 
-#contact{
+#contact {
   height: 60vh;
   text-align: center;
-  background: linear-gradient(
-    to top,
-    rgba(0,0,0, 0.5),
-    rgba(0,0,0, 0.8)
-  ), url("../images/svg/contact.svg");
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)),
+    url("../images/svg/contact.svg");
   background-size: cover;
   background-attachment: fixed;
   padding: 20px;
   background-position: center;
   color: white;
-  h1{
+  h1 {
     font-size: 3em;
+    @include desktop {
+      margin-top: 1em;
+    }
     margin-bottom: 1em;
   }
-  span{
+  span {
     font-size: 2em;
   }
 
-  a{
-    margin-top:4em;
+  a {
+    margin-top: 4em;
 
     @include desktop {
-      margin-top:4em;
+      margin-top: 4em;
     }
   }
-  
 }
 
 .container {
@@ -474,19 +373,19 @@ footer {
   text-transform: uppercase;
   transition: all 1000ms;
 
-  &:hover{
+  &:hover {
     background-color: #000;
-    color:#fff;
+    color: #fff;
     transition: all 1000ms;
   }
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-.btn-green{
-  background-color: #4CAF50; /* Green */
+.btn-green {
+  background-color: #4caf50; /* Green */
   border: none;
   color: white;
   padding: 15px 32px;
