--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond|Indie+Flower|Montserrat");
+@import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond|Indie+Flower|Montserrat|Pacifico");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,700");
 @import url("https://fonts.googleapis.com/css?family=Dosis:300, 400, 700");
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body,
-html {
-  height: 100%;
-  width: 100%;
-}
-
-body {
-  background: #f1f1fa;
-  font-family: "Montserrat", sans-serif;
-  margin: 0;
-  color: #444;
-}
-
 #showcase {
   background: -webkit-gradient(linear, left bottom, right top, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.8))), url("../images/showcase.jpeg");
   background: linear-gradient(to top right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url("../images/showcase.jpeg");
@@ -34,11 +16,8 @@ body {
 }
 
 #showcase nav {
-  position: fixed;
-  width: 100%;
   background-color: rgba(32, 33, 36, 0.8);
   color: #fff;
-  z-index: 999;
 }
 
 @media (min-width: 840px) {
@@ -48,129 +27,20 @@ body {
   }
 }
 
+@media (min-width: 840px) {
+  #showcase nav li .active {
+    border-bottom: 2px solid white;
+  }
+}
+
 #showcase nav .menu_icon {
-  float: right;
   cursor: pointer;
 }
 
 #showcase nav .menu_icon .bar1,
 #showcase nav .menu_icon .bar2,
 #showcase nav .menu_icon .bar3 {
-  width: 35px;
-  height: 5px;
-  background-color: white;
-  margin: 8px 0;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-@media (min-width: 840px) {
-  #showcase nav .menu_icon {
-    display: none;
-  }
-}
-
-#showcase nav .change .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-  transform: rotate(-45deg) translate(-9px, 6px);
-}
-
-#showcase nav .change .bar2 {
-  opacity: 0;
-}
-
-#showcase nav .change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px);
-  transform: rotate(45deg) translate(-8px, -8px);
-}
-
-#showcase nav .logo {
-  font-size: 1.5em;
-  text-align: left;
-  padding: 10px;
-  float: left;
-}
-
-#showcase nav .menu {
-  display: none;
-}
-
-@media (min-width: 840px) {
-  #showcase nav .menu {
-    display: block;
-    padding-right: 4em;
-  }
-}
-
-#showcase nav .menu_visible {
-  display: block;
-  margin-top: 40px;
-  -webkit-animation: menu_show 1s forwards 0s ease;
-          animation: menu_show 1s forwards 0s ease;
-}
-
-@-webkit-keyframes menu_show {
-  0% {
-    -webkit-transform: rotate(0) translateY(-15%);
-            transform: rotate(0) translateY(-15%);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: rotate(0) translateY(0);
-            transform: rotate(0) translateY(0);
-    opacity: 1;
-    height: auto;
-  }
-}
-
-@keyframes menu_show {
-  0% {
-    -webkit-transform: rotate(0) translateY(-15%);
-            transform: rotate(0) translateY(-15%);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: rotate(0) translateY(0);
-            transform: rotate(0) translateY(0);
-    opacity: 1;
-    height: auto;
-  }
-}
-
-@media (min-width: 840px) {
-  #showcase nav ul {
-    float: right;
-  }
-}
-
-#showcase nav ul li {
-  padding: 1em;
-  text-transform: uppercase;
-  list-style-type: none;
-  text-align: center;
-}
-
-@media (min-width: 840px) {
-  #showcase nav ul li {
-    float: left;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-  }
-  #showcase nav ul li .active {
-    border-bottom: 2px solid white;
-  }
-}
-
-#showcase nav ul li a {
-  text-decoration: none;
-  color: inherit;
-}
-
-@media (min-width: 840px) {
-  #showcase nav ul li a {
-    display: block;
-    padding: 2px 20px;
-  }
+  background-color: #fff;
 }
 
 #showcase .showdata {
@@ -201,7 +71,7 @@ body {
 
 #showcase .showdata h1 {
   color: white;
-  font-family: "Cormorant Garamond", serif;
+  font-family: "Pacifico", cursive;
   font-size: 3rem;
   text-transform: uppercase;
   letter-spacing: 0.3em;
@@ -431,7 +301,10 @@ body {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+  margin: 10px;
   position: relative;
+  -webkit-box-shadow: 0 25px 30px -18px rgba(0, 0, 0, 0.28);
+          box-shadow: 0 25px 30px -18px rgba(0, 0, 0, 0.28);
 }
 
 .latest #other .card img {
@@ -439,6 +312,10 @@ body {
   display: block;
   width: 100%;
   height: 10%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
   -webkit-backface-visibility: hidden;
@@ -463,7 +340,7 @@ body {
 }
 
 .latest #other .card .middle .text {
-  background-color: transparent;
+  background-color: green;
   color: white;
   font-size: 16px;
   padding: 16px 32px;
@@ -507,6 +384,12 @@ body {
 #contact h1 {
   font-size: 3em;
   margin-bottom: 1em;
+}
+
+@media (min-width: 840px) {
+  #contact h1 {
+    margin-top: 1em;
+  }
 }
 
 #contact span {
@@ -585,7 +468,7 @@ a {
 }
 
 .btn-green {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   /* Green */
   border: none;
   color: white;
