--- a/scss/params.scss
+++ b/scss/params.scss
@@ -8,8 +8,13 @@ $colors:(
     // primary:#1cad89,
     footer: #000,
     footer-text: #717e83,
-    color: rgba(14,30,37,.54)
-
+    color: rgba(14,30,37,.54),
+    regal-blue: #034378,
+    san-juan: #2d4e68,
+    bermuda: #77d7b9,
+    white: #fff,
+    black: #000,
+    btn-primary:#03a87c
 );
 
 $desktop: 840px;
