--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,7 +33,7 @@
 nav {
     position: fixed;
     width: 100%;
-    background-color: white;
+    background-color: rgba(color(white), 0.8);
     color: #000;
     z-index: 999;
 
