--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
 nav {
   position: fixed;
   width: 100%;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.8);
   color: #000;
   z-index: 999;
 }
