--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,7 +24,7 @@
     right:0;
     bottom:0;
     z-index: 999999;
-    background:url('../images/monkey-1.gif') no-repeat;
+    // background:url('../images/monkey-1.gif') no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
