--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@
 
 #showcase .showdata h1 {
   color: white;
-  font-family: "Pacifico", cursive;
+  font-family: "Cormorant Garamond", serif;
   font-size: 3rem;
   text-transform: uppercase;
   letter-spacing: 0.3em;
@@ -292,6 +292,9 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
@@ -382,13 +385,14 @@
 }
 
 #contact h1 {
-  font-size: 3em;
+  font-size: 1.5em;
   margin-bottom: 1em;
 }
 
 @media (min-width: 840px) {
   #contact h1 {
     margin-top: 1em;
+    font-size: 3em;
   }
 }
 
